Bug fixes, round one: footer overflow, translate3d bugs, Safari compatibility issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4054,7 +4054,7 @@ body {
   background-color: #2e2d2c;
   color: white;
   font-family: 'Open Sans';
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.45;
   margin: 0;
@@ -4311,12 +4311,23 @@ main {
   font-size: 1.25em;
   margin-top: 0; }
 
+#welcome_main p:nth-of-type(2) {
+  margin-bottom: 0; }
+
+#welcome_main p:nth-of-type(3) {
+  margin-top: 0; }
+
 @media screen and (min-width: 768px) {
   .default .introduction {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
     text-align: left; } }
+
+.default .introduction p {
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
 
 body:not(.default) #welcome_main {
   display: none; }
@@ -4502,7 +4513,6 @@ footer {
       footer h3 {
         padding-right: 0.5em; } }
   footer .footer-copy {
-    font-size: 0.64em;
     text-align: right; }
     @media screen and (min-width: 992px) {
       footer .footer-copy {
@@ -4582,7 +4592,7 @@ header {
   bottom: 0;
   transform: translateY(100%);
   width: 30vw;
-  z-index: 15;
+  z-index: 14;
   border-radius: 50%;
   box-shadow: 0 0 40px 6px #b9b9b9, 0 0 150px 90px #b9b9b9;
   background-color: #b9b9b9;
@@ -4702,13 +4712,13 @@ header {
 
 @keyframes float_cloud-alt {
   0% {
-    transform: translate3d(0, 0, 0); }
+    transform: translate3d(0, 0, 1px); }
   40% {
-    transform: translate3d(-35px, 0, 0); }
+    transform: translate3d(-35px, 0, 1px); }
   80% {
-    transform: translate3d(40px, 0, 0); }
+    transform: translate3d(40px, 0, 1px); }
   100% {
-    transform: translate3d(0, 0, 0); } }
+    transform: translate3d(0, 0, 1px); } }
 
 .terrain img {
   position: absolute;
@@ -4763,7 +4773,7 @@ body:not(.sunrise) .terrain img {
   justify-content: space-between;
   align-items: flex-end;
   z-index: 35;
-  transform: translate3d(0, 0, 0); }
+  transform: translate3d(0, 0, 1px); }
   @media screen and (min-width: 576px) {
     .can_container {
       width: 80vw;
@@ -4853,24 +4863,24 @@ body.midnight #midnight_slot {
 
 @keyframes eye_float {
   0% {
-    transform: translate3d(0, 0, 0); }
+    transform: translate(0, 0); }
   30% {
-    transform: translate3d(20px, 10px, 5px); }
+    transform: translate(20px, 10px); }
   40% {
-    transform: translate3d(30px, 9px, 9px); }
+    transform: translate(30px, 9px); }
   80% {
-    transform: translate3d(-15px, 3px, 0px); }
+    transform: translate(-15px, 3px); }
   90% {
-    transform: translate3d(9px, 10px, -3px); }
+    transform: translate(9px, 10px); }
   100% {
-    transform: translate3d(0, 0, 0); } }
+    transform: translate(0, 0); } }
 
 .transition-stage-pre header img, .transition-stage-pre nav {
   transition: opacity 0.1s linear 0.9s !important; }
 
 .transition-stage-pre .can_tooltip a {
   transition: all 1s ease-out;
-  transform: perspective(100px) translate3d(0, 0, 0); }
+  transform: perspective(100px) translate3d(0, 0, 1px); }
   .transition-stage-pre .can_tooltip a::after {
     transition: opacity 0.3s linear 0.6s; }
 
@@ -4916,7 +4926,7 @@ body.midnight #midnight_slot {
 @keyframes background_grow {
   0% {
     border-radius: 80px;
-    transform: perspective(100px) translate3d(0, 0, 0); }
+    transform: perspective(100px) translate3d(0, 0, 1px); }
   60% {
     border-radius: 80px;
     transform: perspective(100px) translate3d(0, 0, -50px);
@@ -4959,7 +4969,7 @@ body.midnight #midnight_slot {
   left: 35%;
   bottom: 40vh;
   width: 30%;
-  z-index: 15; }
+  z-index: 14; }
 
 .float img {
   animation: float_bob 3s infinite ease-in-out; }
@@ -5021,9 +5031,6 @@ body.midnight #midnight_slot {
   left: -60px;
   right: auto; }
 
-.dayglo #overlays {
-  z-index: 14; }
-
 @keyframes float_bob {
   from {
     transform: translate(0, 0px); }
@@ -5056,7 +5063,7 @@ body.midnight #midnight_slot {
   z-index: 44; }
 
 #overlays {
-  z-index: 34;
+  z-index: 15;
   position: fixed;
   top: -35vh;
   left: 0;
@@ -5126,9 +5133,6 @@ body.midnight #midnight_slot {
   left: auto;
   top: 20vh;
   right: 0; }
-
-.midnight #overlays {
-  z-index: 14; }
 
 /* ==========================================================================
   Mother Moon
